# Kinova-ROS-Dev

kinova_description/launch/: display_jaco2.launch
kinova_description/meshes/: jaco2_link_1.STL  jaco2_link_1.dae  jaco2_link_2.STL  jaco2_link_2.dae  jaco2_link_3.STL  jaco2_link_3.dae  jaco2_link_4.STL  jaco2_link_4.dae  jaco2_link_5.STL  jaco2_link_5.dae  jaco2_link_base.STL  jaco2_link_base.dae  jaco2_link_finger_1.STL  jaco2_link_finger_1.dae  jaco2_link_finger_2.STL  jaco2_link_finger_2.dae  jaco2_link_finger_3.STL  jaco2_link_finger_3.dae  jaco2_link_finger_tip_1.STL  jaco2_link_finger_tip_1.dae  jaco2_link_finger_tip_2.STL  jaco2_link_finger_tip_2.dae  jaco2_link_finger_tip_3.STL  jaco2_link_finger_tip_3.dae  jaco2_link_hand.STL  jaco2_link_hand.dae
kinova_description/urdf/: j2n4a300.xacro  j2n4s300.xacro  j2n6a300.xacro  j2n6s300.xacro  j2n6s300.xacro.urdf  j2s6a300.xacro  j2s6s300.xacro  jaco2_arm.xacro  kinova_common.xacro  standalone_jaco2.xacro.urdf
kinova_driver/: CMakeLists.txt
kinova_driver/launch/: jaco2_arm.launch
kinova_driver/src/: kinova_arm.cpp  (+5 more)
kinova_moveit/moveit_motion_plan/: CMakeLists.txt  CMake_Variables.txt  package.xml
kinova_moveit/moveit_motion_plan/include/: gripper_command_action_server.h  joint_trajectory_action_server.h  pick_place.h
kinova_moveit/moveit_motion_plan/launch/: initial_pose.launch  motion_plan.launch
kinova_moveit/moveit_motion_plan/src/: gripper_command_action_server.cpp  initial_pose.cpp  joint_trajectory_action_server.cpp  motion_plan.cpp  pick_place.cpp  work_scene.cpp
kinova_msgs/: CMakeLists.txt
(+20 files in other folders)
